syntax = "proto3";

package average;

option go_package = "go-grpc-server/proto";

service Calculator {
  rpc Average (AverageRequest) returns (AverageResponse);
  rpc RunningAverage (stream NumberRequest) returns (AverageResponse);
}

message AverageRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message AverageResponse {
  double result = 1;
}

message NumberRequest {
  int32 number = 1;
}
